quilr-ingress-beoauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: quilr-ingress-beoauth
  namespace: quilr
spec:
  ingressClassName: nginx
  rules:
  - host: poc.quilr.ai
    http:
      paths:
      - backend:
          service:
            name: quilr-be-oauth
            port:
              number: 8080
        path: /ext-beoauth(/|$)(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - poc.quilr.ai
    secretName: quilr-tls-secret-prod-useast-skzzh
