quilr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/server-alias: a9362f5e503b54885b19751ee9a47cbd-1361376267.us-east-1.elb.amazonaws.com
  name: quilr-ingress
  namespace: quilr
spec:
  ingressClassName: nginx
  rules:
  - host: poc.quilr.ai
    http:
      paths:
      - backend:
          service:
            name: quilr-bff
            port:
              number: 80
        path: /bff/(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - poc.quilr.ai
    secretName: quilr-tls-secret-prod-useast-skzzh
